# warg

./: CHANGELOG.md  README.md  warg.cabal
app/: Main.hs
demo/: README.md  generate_paramuno_demo.py  paramo_attenuation.json  paramo_defended.json  paramo_gate_interaction.json  paramuno_demo.json  paramuno_scenario.md  run_demo.sh
src/: Cospan.hs  DActegory.hs  DPosetTensor.hs  DUnit.hs  Explanation.hs  FixedPoint.hs  Monoidal.hs  Types.hs
test/: Spec.hs
